# hr-attrition

./: README.md  main.py  pyproject.toml
notebooks/: 01_exploring.ipynb
